syntax = "proto3";

package im.ghasedak.rpc;

option java_package = "im.ghasedak.rpc.test";
option java_multiple_files = true;

import "api/update.proto";
import "rpc/misc.proto";

service TestService {
    rpc CheckAuth (RequestCheckAuth) returns (ResponseVoid);
    rpc SendUpdate (RequestSendUpdate) returns (ResponseVoid);
}

message RequestCheckAuth {
}

message RequestSendUpdate {
    im.ghasedak.api.UpdateContainer update_container = 1;
}